// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup render AvatarGroup < 3 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "maxWidth": 68,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "zIndex": 1,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "right": 12,
          "zIndex": 2,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
</View>
`;

exports[`AvatarGroup render AvatarGroup = 4 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "maxWidth": 124,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#2B78EE",
        },
        {
          "zIndex": 1,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#2B78EE",
        },
        {
          "right": 12,
          "zIndex": 2,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#2B78EE",
        },
        {
          "right": 24,
          "zIndex": 3,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#2B78EE",
        },
        {
          "right": 36,
          "zIndex": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
</View>
`;

exports[`AvatarGroup render AvatarGroup 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "maxWidth": 124,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#2B78EE",
        },
        {
          "zIndex": 1,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Image
      accessibilityLabel="imageAvatar"
      onError={[Function]}
      source={
        {
          "headers": undefined,
          "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
        }
      }
      style={
        {
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "width": 40,
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#2B78EE",
        },
        {
          "right": 12,
          "zIndex": 2,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#2B78EE",
        },
        {
          "right": 24,
          "zIndex": 3,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#EDEFF3",
        "borderColor": "#FFFFFF",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 40,
        "justifyContent": "center",
        "right": 36,
        "width": 40,
        "zIndex": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
            "minHeight": 16,
          },
          {
            "alignSelf": "center",
            "textAlign": "center",
          },
        ]
      }
    >
      +8
    </Text>
  </View>
</View>
`;

exports[`AvatarGroup render AvatarGroup groupCount 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "maxWidth": 124,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "zIndex": 1,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Image
      accessibilityLabel="imageAvatar"
      onError={[Function]}
      source={
        {
          "headers": undefined,
          "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
        }
      }
      style={
        {
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "width": 40,
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "right": 12,
          "zIndex": 2,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "right": 24,
          "zIndex": 3,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#EDEFF3",
        "borderColor": "#FFFFFF",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 40,
        "justifyContent": "center",
        "right": 36,
        "width": 40,
        "zIndex": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
            "minHeight": 16,
          },
          {
            "alignSelf": "center",
            "textAlign": "center",
          },
        ]
      }
    >
      +47
    </Text>
  </View>
</View>
`;

exports[`AvatarGroup render AvatarGroup with props 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "maxWidth": 124,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "zIndex": 1,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Image
      accessibilityLabel="imageAvatar"
      onError={[Function]}
      source={
        {
          "headers": undefined,
          "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
        }
      }
      style={
        {
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "width": 40,
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "right": 12,
          "zIndex": 2,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        {
          "backgroundColor": "#ff0000",
        },
        {
          "right": 24,
          "zIndex": 3,
        },
        {
          "opacity": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      ИП
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#EDEFF3",
        "borderColor": "#FFFFFF",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 40,
        "justifyContent": "center",
        "right": 36,
        "width": 40,
        "zIndex": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
            "minHeight": 16,
          },
          {
            "alignSelf": "center",
            "textAlign": "center",
          },
        ]
      }
    >
      +99
    </Text>
  </View>
</View>
`;
